--- a/README
+++ b/README
@@ -7,41 +7,51 @@ Rust parser for CSS color strings.
 extern crate css_color_parser;
 
 use css_color_parser::Color as CssColor;
-use std::str::FromStr;
 
 fn main() {
 
-	let transparent_black = CssColor { r: 0, g: 0, b: 0, a: 1.0 };
+    let transparent_black = CssColor { r: 0, g: 0, b: 0, a: 1.0 };
 
-    println!("{:?}", CssColor::from_str(" rgba (255, 128, 12, 0.5)").unwrap_or(transparent_black));
-	//Color { r: 255, g: 128, b: 12, a: 0.5 }
+    println!("{:?}", " rgba (255, 128, 12, 0.5)".parse::<CssColor>()
+        .unwrap_or(transparent_black));
+    //Color { r: 255, g: 128, b: 12, a: 0.5 }
 
-    println!("{:?}", CssColor::from_str("#fff").unwrap_or(transparent_black));
+    println!("{:?}", "#fff".parse::<CssColor>()
+        .unwrap_or(transparent_black));
     //Color { r: 255, g: 255, b: 255, a: 1 }
 
-    println!("{:?}", CssColor::from_str("#ff0011").unwrap_or(transparent_black));
+    println!("{:?}", "#ff0011".parse::<CssColor>()
+        .unwrap_or(transparent_black));
     //Color { r: 255, g: 0, b: 17, a: 1 }
 
-    println!("{:?}", CssColor::from_str("slateblue").unwrap_or(transparent_black));
+    println!("{:?}", "slateblue".parse::<CssColor>()
+        .unwrap_or(transparent_black));
     //Color { r: 106, g: 90, b: 205, a: 1 }
 
-    println!("{:?}", CssColor::from_str("blah").unwrap_or(transparent_black));
-	//Color { r: 0, g: 0, b: 0, a: 0 } - ColorParseError
-
-    println!("{:?}", CssColor::from_str("ffffff").unwrap_or(transparent_black));
+    println!("{:?}", "blah".parse::<CssColor>()
+        .unwrap_or(transparent_black));
     //Color { r: 0, g: 0, b: 0, a: 0 } - ColorParseError
 
-    println!("{:?}", CssColor::from_str("hsla(900, 15%, 90%, 0.5)").unwrap_or(transparent_black));
-	//Color { r: 226, g: 233, b: 233, a: 0.5 }
+    println!("{:?}", "ffffff".parse::<CssColor>()
+        .unwrap_or(transparent_black));
+    //Color { r: 0, g: 0, b: 0, a: 0 } - ColorParseError
 
-    println!("{:?}", CssColor::from_str("hsla(900, 15%, 90%)").unwrap_or(transparent_black));
-	//Color { r: 0, g: 0, b: 0, a: 0 } - ColorParseError
+    println!("{:?}", "hsla(900, 15%, 90%, 0.5)".parse::<CssColor>()
+        .unwrap_or(transparent_black));
+    //Color { r: 226, g: 233, b: 233, a: 0.5 }
 
-    println!("{:?}", CssColor::from_str("hsl(900, 15%, 90%)").unwrap_or(transparent_black));
-	//Color { r: 226, g: 233, b: 233, a: 1 }
+    println!("{:?}", "hsla(900, 15%, 90%)".parse::<CssColor>()
+        .unwrap_or(transparent_black));
+    //Color { r: 0, g: 0, b: 0, a: 0 } - ColorParseError
 
-    println!("{:?}", CssColor::from_str("hsl(900, 0.15, 90%)").unwrap_or(transparent_black)); // NOTE: not spec compliant.
-	//Color { r: 226, g: 233, b: 233, a: 1 }
+    println!("{:?}", "hsl(900, 15%, 90%)".parse::<CssColor>()
+        .unwrap_or(transparent_black));
+    //Color { r: 226, g: 233, b: 233, a: 1 }
+
+    // NOTE: not spec compliant.
+    println!("{:?}", "hsl(900, 0.15, 90%)".parse::<CssColor>()
+        .unwrap_or(transparent_black)); 
+    //Color { r: 226, g: 233, b: 233, a: 1 }
 }
 
 (c) Dean McNamee <dean@gmail.com>, 2012.
